---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 27/11/2020
  Bugfixes:
    - Fixed crash on Sync area ghost placing (Honktown)
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 24/11/2020
  Gui:
    - Data Assembler: Setting the number of Items to nothing will create an unlimited amount of this Item
    - The Network Access Point now shows its Quatron Purity inside its GUI
    - Added the Quatron Purity amount inside the Main GUI and the Information GUI
    - Added an Option to select the Main GUI Buttons size
    - Added Options to show/Hide Main GUI Progress Bars
    - Added an Option to select the Main GUI Progress Bars size
    - Added an Option to show/hide the Mobile Factory positions inside the Main GUI
    - Added an Option to show/hide the Day time (HH:MM) inside the Main GUI
    - Added an Option to show/hide the Chunk current Temperature (Erya Tech extension >= 0.1.8 must be installed)
    - Increased the size of all Information GUI Buttons
  Translation:
    - Some small fixes to translations  
  Bugfixes:
    - Some Typos fixes
    - The Data Assembler should not start the recipe if there is too many of the first product in the Data Network
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 23/11/2020
  Features:
    - Added a GUI to the Quatron Reactor
  Translation:
    - Fixed the Energy Cube Tooltip
    - Added "Can be removed" to the Internal Energy/Quatron Cube
  Changes:
    - Reworked Quatron Recipes for a better readability
  Graphics:
    - Changed the color of the Mobile Factory Quatron Laser to match the Quatron Color
  Bugfixes:
    - Fixed a crash that can happen if the Player have an empty name
    - Fixed a crash caused by the Profiler
    - The Mobile Factory Energy Laser should now properly works