@@ -691,13 +691,17 @@ MFName=My Mobile Factory Name:
 MFNameTT=The name of your Mobile Factory, the other Players will see this name
 MFChangeNameTT=Minimum 3 Characters, maximum 30 Characters
 Change=Change
+Select=Select
 ChangeNameSameName=This is the same Name
 ChangeNameCharNumberError=Unable to change the Name, the Mobile Factory name must have at last 3 Characters and a maximum of 30 Characters
 ChangeNameAlreadyUsed=This Mobile Factory Name is already used
 ChangeNameChanged=Your Mobile Factory Name is changed to
+SelectMFTT1=You are allowed to use this Mobile Factory
+SelectMFTT2=You are not allowed to use this Mobile Factory
+CurrentMFChanged=Your current Mobile Factory is changed to
 
 ## ---- TP GUI ---- ##
-MFTPGUITitle=Jump Drive
+MFTPGUITitle=Jump Drive of
 JumpLocation=Jump Location
 AddLocation=Add Location
 JumpDriveStatue=Jump Drive Charge
